css: fix overly broad [Id$='Page'] selector matching checkbuttons
The CSS rule `.lokdialog.ui-dialog-content [Id$='Page']` was intended
for tab page containers but also matched checkbuttons whose id ends
with "Page" (e.g. checkAcrossPage in Format > Paragraph > Text Flow),
adding unwanted grid-column-gap that misaligned the checkbox.

Add :not(.checkbutton) to exclude checkbox widgets from this rule,
and remove the now-unnecessary workaround in jsdialogs.css.

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -1080,7 +1080,7 @@ body {
 	padding: 0px;
 }
 
-.lokdialog.ui-dialog-content [Id$='Page'] {
+.lokdialog.ui-dialog-content [Id$='Page']:not(.checkbutton) {
 	grid-column-gap: 24px;
 }
 
